# thermopi

./: Makefile  README.md  pyproject.toml  setup.py  thermopi.service
src/thermopi/: __init__.py  run_thermopi.py
src/thermopi/configs/: ccs811_sample_data.yaml  display_settings.yaml  requirements.txt  schedule.yaml  thermostat_cfg.yaml
src/thermopi/endpoints/: finger_endpoint.py
src/thermopi/factories/: finger_factory.py
src/thermopi/fonts/asimov/: FONTLOG_NOTICE.txt  read.txt
src/thermopi/libs/bme280/: bme280.py  bme_280_params.py
src/thermopi/libs/ccs811/: ccs811.py  ccs811_param.py  ccs811_simple.py
src/thermopi/libs/ili9341/: geometry.py  tft.py
src/thermopi/libs/relay/: relay.py
src/thermopi/libs/system/: system.py
src/thermopi/libs/tca9548a/: tca9548a.py
src/thermopi/libs/thermostat/: thermostat.py
src/thermopi/obsolete_runners/: thermo_stat.py
src/thermopi/protocols/: finger_protocol.py
src/thermopi/ui/core/: Screen.py
src/thermopi/ui/display/: __init__.py  display.py
src/thermopi/ui/helpers/: __init__.py  helpers.py
src/thermopi/ui/menu/homepage/: homepage.py  homepage_old.py
src/thermopi/ui/menu/scheduler/: scheduler.py
src/thermopi/ui/menu/settings/: settings.py
