[tool.poetry]
name = "thermopi"
version = "0.1.0"
description = "ThermoPi is a smart thermostat using RPi Zero 2 W"
authors = ["Adrian Ciobanita <aciokkan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^60.5.0"
pytest = "^6.2.5"
requests = "^2.27.1"
lxml = "^4.7.1"
PyJWT = "^2.3.0"
cryptography = "^36.0.1"
pycryptodome = "^3.13.0"
Authlib = "^0.15.5"
pyotp = "^2.6.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
